style: Fix more Sonar issues